# BRainbow

./: .gitignore  Cargo.toml  Makefile  build.rs  deploy.sh
src/: auth.rs  error.rs  main.rs  pagination.rs  time.rs
src/db/: mod.rs
src/entities/: user.rs
src/entity/: card.rs  mod.rs  onto.rs  signifier_signified.rs  task.rs  task_decomposition.rs  task_dependency.rs  task_time_allocation.rs  time_window.rs  user.rs
src/handlers/: card.rs  create_user.rs  header.rs  home.rs  html.rs  mod.rs  onto.rs  sign.rs  task.rs  time_window.rs  user.rs
src/modules/: mod.rs
src/modules/card/: handler.rs  mod.rs  model.rs  repository.rs  service.rs
src/modules/db_viewer/: handler.rs  mod.rs  model.rs  repo.rs  repository.rs
src/modules/image/: handler.rs  mod.rs  model.rs  repository.rs  service.rs
src/modules/media/: handler.rs  mod.rs  model.rs  repository.rs  service.rs
src/modules/mem/: fsrs.rs  handler.rs  mod.rs  model.rs  repository.rs  service.rs
src/modules/onto/: handler.rs  mod.rs  model.rs  repository.rs  service.rs
src/modules/sign/: handler.rs  mod.rs  model.rs  repository.rs  service.rs
src/modules/task/: crud.rs  dependency.rs  dto.rs  handler.rs  (+7 more)
src/repos/: card.rs  mod.rs  onto.rs  sign.rs  task.rs  time_window.rs  user.rs
src/repositories/: card.rs  mod.rs  onto.rs  sign.rs  task.rs  user.rs
src/routes/: api.rs  graphql.rs  html.rs  mod.rs
src/services/: card.rs  html.rs  mod.rs  onto.rs  sign.rs  task.rs
src/state/: mod.rs
templates/: base.html  onto_detail.html  ontos.html  sign_detail.html  signs.html  task_detail.html  tasks.html  user_detail.html  users.html
web/: biome.json  deno.json  index.html  package.json  pnpm-lock.yaml  rsbuild.config.ts  rslint.jsonc  tsconfig.json  vite.config.ts
web/src/: App.module.css  AuthStatus.module.css  AuthStatus.tsx  Layout.tsx  add-dependency-dialog.ts  add-subtask-dialog.ts  add-timewindow-dialog.ts  api.ts  app.css  app.ts  auth.tsx  global.css  global.d.ts  index.html  index.tsx  markdown.css  routes.ts  style.css  task-detail.ts  task-form.ts  task-list.ts  test.html  types.ts
(+186 files in other folders)
