[package]
name = "brainbow"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros", "multipart"] }
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1.49.0", features = ["full"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite", "chrono", "macros"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

serde_json = "1.0"
tower-http = { version = "0.5.0", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

bcrypt = "0.19.0"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
fsrs = "6.6.1"
